# poor-mans-keypass

./: .gitignore  README.md  extract_seip_content.py  password.pgp
boiler/: server.c
boiler/main/: spiffs_example_main.c
client/: Cargo.toml
client/src/: main.rs
connection/: CMakeLists.txt  client.py
connection/main/: CMakeLists.txt  idf_component.yml  server.cpp
server/: CMakeLists.txt  export.sh  main.cpp  sdkconfig.defaults  server.cpp  server.h  tls.cpp  tls.h
server/include/: common_types.h
server/main/: CMakeLists.txt  main.cpp  tls.cpp  tls.h
server/main/include/: common_types.h
server/main/storage/: tls_keys.h
server/main/test/: client.cpp
server/storage/: tls.cpp.in  tls_keys.h
server/test/: client.cpp  client.h
